include/pinbridge/pinbridge.h

typedef int32_t PbStatus;
/* Opaque callback registration or scoped-handler token. Zero is invalid. */
typedef struct PbCallbackHandle
{
    uint64_t opaque;
} PbCallbackHandle;
/* Borrowed CONTEXT pointer. Consumers must not dereference or retain it. */
typedef struct PbContextOpaque* PbContextHandle;
typedef const struct PbContextOpaque* PbConstContextHandle;
/* Borrowed physical register context. Consumers must not dereference or retain it. */
typedef struct PbPhysicalContextOpaque* PbPhysicalContextHandle;
typedef const struct PbPhysicalContextOpaque* PbConstPhysicalContextHandle;
/* Borrowed XED decode object. Valid only while PbXedDecodeCallback is running. */
typedef struct PbXedDecodedInstOpaque* PbXedDecodedInstHandle;
/* Borrowed, logically opaque Pin exception info. NULL means details are not requested. */
typedef struct PbExceptionInfoOpaque* PbExceptionInfoHandle;
/* Borrowed child-process handle. Valid only while PbFollowChildProcessCallback runs. */
typedef struct PbChildProcessOpaque* PbChildProcessHandle;
/* Numeric identities from the matched Pin 3.31 SDK build. */
typedef uint32_t PbRegId;
typedef uint32_t PbProcessorState;
typedef uint32_t PbThreadId;
typedef uint32_t PbAttachStatus;
typedef uint32_t PbContextChangeReason;
typedef uint32_t PbExceptHandlingResult;
typedef struct PbRegSet
{
    uint64_t words[PB_REGSET_WORD_COUNT];
} PbRegSet;
typedef struct PbFxSave
{
    uint8_t bytes[PB_FXSAVE_SIZE];
} PbFxSave;
/* ABI-owned snapshot passed by const pointer during memory translation callbacks. */
typedef struct PbMemoryTransInfo
{
    uint64_t address;
    uint64_t size;
    uint64_t instruction_pointer;
    PbThreadId thread_id;
    uint32_t memory_operation;
    uint8_t is_atomic;
    uint8_t is_rmw;
    uint8_t is_prefetch;
    uint8_t is_from_pin;
    uint32_t reserved;
} PbMemoryTransInfo;
/* ABI-owned value snapshot of the public EXCEPTION_INFO query surface. */
typedef struct PbExceptionInfoSnapshot
{
    uint32_t exception_code;
    uint32_t exception_class;
    uint64_t exception_address;
    uint32_t flags;
    uint32_t faulty_access_type;
    uint64_t faulty_access_address;
    uint32_t fp_errors;
    uint32_t windows_exception_code;
    uint32_t windows_argument_count;
    uint32_t reserved;
    uint64_t windows_arguments[5];
} PbExceptionInfoSnapshot;
typedef void(PB_CALL* PbApplicationStartCallback)(void* user_data);
typedef void(PB_CALL* PbPrepareForFiniCallback)(void* user_data);
typedef void(PB_CALL* PbFiniCallback)(int32_t code, void* user_data);
typedef void(PB_CALL* PbDetachCallback)(void* user_data);
typedef void(PB_CALL* PbDetachProbedCallback)(void* user_data);
typedef void(PB_CALL* PbAttachProbedCallback)(void* user_data);
typedef void(PB_CALL* PbOutOfMemoryCallback)(
    uint64_t requested_size, void* user_data);
typedef void(PB_CALL* PbThreadStartCallback)(
    PbThreadId thread_id, PbContextHandle context, int32_t flags, void* user_data);
typedef void(PB_CALL* PbThreadFiniCallback)(
    PbThreadId thread_id, PbConstContextHandle context, int32_t code, void* user_data);
/* from/to are borrowed for the callback duration; either may be NULL per Pin's reason rules. */
typedef void(PB_CALL* PbContextChangeCallback)(
    PbThreadId thread_id, PbContextChangeReason reason,
    PbConstContextHandle from, PbContextHandle to, int32_t info, void* user_data);
typedef void(PB_CALL* PbXedDecodeCallback)(
    PbXedDecodedInstHandle decoded_instruction, void* user_data);
typedef uint64_t(PB_CALL* PbFetchCallback)(
    void* buffer, uint64_t address, uint64_t size,
    PbExceptionInfoHandle exception_info, void* user_data);
typedef PbExceptHandlingResult(PB_CALL* PbInternalExceptionCallback)(
    PbThreadId thread_id, PbExceptionInfoHandle exception_info,
    PbPhysicalContextHandle physical_context, void* user_data);
typedef uint64_t(PB_CALL* PbMemoryAddressTransCallback)(
    const PbMemoryTransInfo* info, void* user_data);
/* Return zero to leave the child uninstrumented, nonzero to follow it. */
typedef uint8_t(PB_CALL* PbFollowChildProcessCallback)(
    PbChildProcessHandle child, void* user_data);
typedef void(PB_CALL* PbProbedCallCallback)(void* user_data);
/* CONTROL lifecycle registrations remain active for the Pin process lifetime. */
PB_API PbStatus PB_CALL pb_pin_add_application_start_function(
    PbApplicationStartCallback callback, void* user_data, PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_pin_add_prepare_for_fini_function(
    PbPrepareForFiniCallback callback, void* user_data, PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_pin_add_fini_function(
    PbFiniCallback callback, void* user_data, PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_pin_add_thread_start_function(
    PbThreadStartCallback callback, void* user_data, PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_pin_add_thread_fini_function(
    PbThreadFiniCallback callback, void* user_data, PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_pin_add_context_change_function(
    PbContextChangeCallback callback, void* user_data, PbCallbackHandle* out_callback);
/* Pin owns one global XED decode callback slot; repeated calls replace bridge state. */
PB_API PbStatus PB_CALL pb_pin_add_xed_decode_callback_function(
    PbXedDecodeCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_pin_add_fetch_function(
    PbFetchCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_pin_fetch_code(
    void* copy_buffer, uint64_t address, uint64_t max_size,
    PbExceptionInfoHandle exception_info, uint64_t* out_copied);
/* ABI v1.8: raw fallback for use inside PbFetchCallback. Unlike
   pb_pin_fetch_code, this never invokes the registered fetch callback. */
PB_API PbStatus PB_CALL pb_pin_fetch_original_code(
    void* copy_buffer, uint64_t address, uint64_t max_size,
    PbExceptionInfoHandle exception_info, uint64_t* out_copied);
PB_API PbStatus PB_CALL pb_pin_add_internal_exception_handler(
    PbInternalExceptionCallback callback, void* user_data,
    PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_pin_try_start(
    PbThreadId thread_id, PbInternalExceptionCallback callback, void* user_data,
    PbCallbackHandle* out_scope);
PB_API PbStatus PB_CALL pb_pin_try_end(
    PbThreadId thread_id, PbCallbackHandle* scope);
PB_API PbStatus PB_CALL pb_pin_add_memory_address_trans_function(
    PbMemoryAddressTransCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_pin_get_memory_address_trans_function(
    PbMemoryAddressTransCallback* out_callback);
/* Process-global single slot. NULL callback disables notification. The callback
   may run concurrently, with unknown lock state, and must not allocate memory. */
PB_API PbStatus PB_CALL pb_pin_add_out_of_memory_function(
    PbOutOfMemoryCallback callback, void* user_data);
/* Only one follow-child callback may be registered in a Pin process. */
PB_API PbStatus PB_CALL pb_pin_add_follow_child_process_function(
    PbFollowChildProcessCallback callback, void* user_data,
    PbCallbackHandle* out_callback);
/* Child command-line data is borrowed by Pin and exposed through copies only.
   Bytes use Pin's narrow-character encoding without transcoding. required_size
   includes NUL and small buffers are untouched. */
PB_API PbStatus PB_CALL pb_child_process_get_command_line_count(
    PbChildProcessHandle child, int32_t* out_argc);
PB_API PbStatus PB_CALL pb_child_process_get_command_line_argument(
    PbChildProcessHandle child, int32_t index, char* buffer,
    uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_child_process_get_id(
    PbChildProcessHandle child, uint32_t* out_process_id);
/* argv is consumed synchronously and remains owned by the caller. */
PB_API PbStatus PB_CALL pb_child_process_set_pin_command_line(
    PbChildProcessHandle child, int32_t argc, const char* const* argv);
/* Fixed PIN_InsertCallProbed family: IARG_PTR(user_data), IARG_END. */
PB_API PbStatus PB_CALL pb_pin_insert_call_probed(
    uint64_t address, PbProbedCallCallback callback,
    void* user_data, uint8_t* out_inserted);
/* JIT-only fixed PIN_CallApplicationFunction families. The context is borrowed
   from the active Pin callback. Calls use CALLINGSTD_DEFAULT and default
   CALL_APPLICATION_FUNCTION_PARAM settings. */
PB_API PbStatus PB_CALL pb_pin_call_application_function_void_0(
    PbConstContextHandle context, PbThreadId thread_id,
    uint64_t function_address);
PB_API PbStatus PB_CALL pb_pin_call_application_function_u64_0(
    PbConstContextHandle context, PbThreadId thread_id,
    uint64_t function_address, uint64_t* out_result);
PB_API PbStatus PB_CALL pb_pin_call_application_function_u64_1(
    PbConstContextHandle context, PbThreadId thread_id,
    uint64_t function_address, uint64_t argument0, uint64_t* out_result);
PB_API PbStatus PB_CALL pb_pin_call_application_function_u64_2(
    PbConstContextHandle context, PbThreadId thread_id,
    uint64_t function_address, uint64_t argument0, uint64_t argument1,
    uint64_t* out_result);
/* Calls a function with the shape void* target(size_t). */
PB_API PbStatus PB_CALL pb_pin_call_application_function_ptr_usize(
    PbConstContextHandle context, PbThreadId thread_id,
    uint64_t function_address, uint64_t size, void** out_result);
/* JIT and Probe detach completion callbacks are deliberately separate:
   registering the wrong Pin callback family for the active mode is invalid. */
PB_API PbStatus PB_CALL pb_pin_add_detach_function(
    PbDetachCallback callback, void* user_data,
    PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_pin_add_detach_function_probed(
    PbDetachProbedCallback callback, void* user_data,
    PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_pin_detach(void);
PB_API PbStatus PB_CALL pb_pin_detach_probed(void);
/* Asynchronous reattach requests. PB_OK reports bridge execution; out_status
   reports whether Pin accepted the request or detach is still completing. */
PB_API PbStatus PB_CALL pb_pin_attach_probed(
    PbAttachProbedCallback callback, void* user_data, PbAttachStatus* out_status);
/* PROCESS queries and exits. ExitApplication is JIT-only and runs Pin Fini
   callbacks; ExitProcess is immediate and supports JIT and Probe. */
PB_API PB_NORETURN void PB_CALL pb_pin_exit_application(int32_t status);
PB_API PB_NORETURN void PB_CALL pb_pin_exit_process(int32_t exit_code);
PB_API PbStatus PB_CALL pb_pin_get_pid(int32_t* out_pid);
PB_API PbStatus PB_CALL pb_pin_is_amx_active(
    PbThreadId thread_id, uint8_t* out_active);
/* tile_config_size must be at least the 64-byte Intel64 TILECONFIG width. */
PB_API PbStatus PB_CALL pb_tile_config_get_palette_id(
    const uint8_t* tile_config, uint64_t tile_config_size, uint8_t* out_palette_id);
PB_API PbStatus PB_CALL pb_tile_config_get_tile_bytes_per_row(
    const uint8_t* tile_config, uint64_t tile_config_size,
    PbRegId tmm, uint32_t* out_bytes_per_row);
PB_API PbStatus PB_CALL pb_tile_config_get_tile_rows(
    const uint8_t* tile_config, uint64_t tile_config_size,
    PbRegId tmm, uint32_t* out_rows);
/* PB-PIN-CONTEXT-0020 / PIN_GetContextReg */
PB_API PbStatus PB_CALL pb_pin_get_context_reg(
    PbConstContextHandle context,
    PbRegId reg,
    uint64_t* out_value);
PB_API PbStatus PB_CALL pb_pin_get_context_regval(
    PbConstContextHandle context, PbRegId reg, uint8_t* buffer,
    uint64_t capacity, uint64_t* required_size);
/* PB-PIN-CONTEXT-0022 / PIN_GetFullContextRegsSet */
PB_API PbStatus PB_CALL pb_pin_get_full_context_regs_set(PbRegSet* out_regs);
PB_API PbStatus PB_CALL pb_pin_get_context_fpstate(
    PbConstContextHandle context, uint8_t* buffer,
    uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_pin_set_context_fpstate(
    PbContextHandle context, const uint8_t* value, uint64_t value_size);
PB_API PbStatus PB_CALL pb_pin_get_context_fxsave(
    PbConstContextHandle context, PbFxSave* out_fxsave);
PB_API PbStatus PB_CALL pb_pin_set_context_fxsave(
    PbContextHandle context, const PbFxSave* fxsave);
/* Windows JIT-only PHYSICAL_CONTEXT access. Handles are borrowed from an
   internal-exception callback and registers must be physical integers. */
PB_API PbStatus PB_CALL pb_pin_get_physical_context_reg(
    PbConstPhysicalContextHandle context, PbRegId reg, uint64_t* out_value);
PB_API PbStatus PB_CALL pb_pin_set_physical_context_reg(
    PbPhysicalContextHandle context, PbRegId reg, uint64_t value);
PB_API PbStatus PB_CALL pb_pin_get_physical_context_fxsave(
    PbConstPhysicalContextHandle context, PbFxSave* out_fxsave);
PB_API PbStatus PB_CALL pb_pin_set_physical_context_fxsave(
    PbPhysicalContextHandle context, const PbFxSave* fxsave);
/* PB-PIN-CONTEXT-0029 / PIN_SupportsProcessorState */
PB_API PbStatus PB_CALL pb_pin_supports_processor_state(
    PbProcessorState state, uint8_t* out_supported);
/* PB-PIN-CONTEXT-0016 / PIN_ContextContainsState. context is borrowed. */
PB_API PbStatus PB_CALL pb_pin_context_contains_state(
    PbContextHandle context, PbProcessorState state, uint8_t* out_contains);
PB_API PbStatus PB_CALL pb_pin_save_context(
    PbConstContextHandle source, PbContextHandle destination);
PB_API PbStatus PB_CALL pb_pin_set_context_reg(
    PbContextHandle context, PbRegId reg, uint64_t value);
PB_API PbStatus PB_CALL pb_pin_set_context_regval(
    PbContextHandle context, PbRegId reg, const uint8_t* value, uint64_t value_size);
/* ABI-aware integer stack arguments at a function entry. `index` is the
 * logical stack argument number: x86 index 0 is [ESP+4], while x64 index 0
 * is the first argument beyond RCX/RDX/R8/R9 at [RSP+0x28]. */
PB_API PbStatus PB_CALL pb_pin_get_context_stack_arg(
    PbConstContextHandle context, uint32_t index, uint64_t* out_value);
PB_API PbStatus PB_CALL pb_pin_set_context_stack_arg(
    PbContextHandle context, uint32_t index, uint64_t value);
/* PB-PIN-CONTEXT-0017 / PIN_ExecuteAt.
 * NULL returns PB_ERR_INVALID_ARGUMENT. A valid call is only permitted from a
 * Pin analysis or replacement routine and does not return on success. */
PB_API PbStatus PB_CALL pb_pin_execute_at(PbConstContextHandle context);
/* Fixed CONTROL queries. Boolean outputs are normalized to 0 or 1. */
PB_API PbStatus PB_CALL pb_pin_check_read_access(uint64_t address, uint8_t* out_accessible);
PB_API PbStatus PB_CALL pb_pin_check_write_access(uint64_t address, uint8_t* out_accessible);
PB_API PbStatus PB_CALL pb_pin_is_attaching(uint8_t* out_attaching);
PB_API PbStatus PB_CALL pb_pin_is_probe_mode(uint8_t* out_probe_mode);
/* Returns PB_ERR_INVALID_STATE unless Pin is already running in Probe mode. */
PB_API PbStatus PB_CALL pb_pin_is_safe_for_probed_insertion(
    uint64_t address, uint8_t* out_safe);
/* UTF-8. required_size includes NUL; no partial write on small buffers. */
PB_API PbStatus PB_CALL pb_pin_tool_full_path(
    char* buffer, uint64_t capacity, uint64_t* required_size);
/* PB-PIN-DEBUG_INFO-0001 / PIN_GetSourceLocation. file_name is UTF-8. */
PB_API PbStatus PB_CALL pb_pin_get_source_location(
    uint64_t address, int32_t* column, int32_t* line,
    char* file_name, uint64_t capacity, uint64_t* required_size);
/* PB-PIN-CONTROL-0064 / PIN_SafeCopy */
PB_API PbStatus PB_CALL pb_pin_safe_copy(
    void* destination,
    uint64_t source_address,
    uint64_t size,
    uint64_t* out_copied);
PB_API PbStatus PB_CALL pb_pin_safe_copy_ex(
    void* destination,
    uint64_t source_address,
    uint64_t size,
    uint64_t* out_copied,
    PbExceptionInfoSnapshot* out_exception);