bindings/rust/pinbridge-sys/src/bindings.rs

    pub fn pb_pin_add_application_start_function(callback: PbApplicationStartCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_pin_add_prepare_for_fini_function(callback: PbPrepareForFiniCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_pin_add_fini_function(callback: PbFiniCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_pin_add_thread_start_function(callback: PbThreadStartCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_pin_add_thread_fini_function(callback: PbThreadFiniCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_pin_add_context_change_function(callback: PbContextChangeCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_pin_add_xed_decode_callback_function(callback: PbXedDecodeCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_pin_add_fetch_function(callback: PbFetchCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_pin_fetch_code(copy_buffer: *mut c_void, address: u64, max_size: u64, exception_info: PbExceptionInfoHandle, out_copied: *mut u64) -> PbStatus;
    pub fn pb_pin_fetch_original_code(copy_buffer: *mut c_void, address: u64, max_size: u64, exception_info: PbExceptionInfoHandle, out_copied: *mut u64) -> PbStatus;
    pub fn pb_pin_add_internal_exception_handler(callback: PbInternalExceptionCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_pin_try_start(thread_id: PbThreadId, callback: PbInternalExceptionCallback, user_data: *mut c_void, out_scope: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_pin_try_end(thread_id: PbThreadId, scope: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_pin_add_memory_address_trans_function(callback: PbMemoryAddressTransCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_pin_get_memory_address_trans_function(out_callback: *mut PbMemoryAddressTransCallback) -> PbStatus;
    pub fn pb_pin_add_out_of_memory_function(callback: PbOutOfMemoryCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_pin_add_follow_child_process_function(callback: PbFollowChildProcessCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_child_process_get_command_line_count(child: PbChildProcessHandle, out_argc: *mut i32) -> PbStatus;
    pub fn pb_child_process_get_command_line_argument(child: PbChildProcessHandle, index: i32, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_child_process_get_id(child: PbChildProcessHandle, out_process_id: *mut u32) -> PbStatus;
    pub fn pb_child_process_set_pin_command_line(child: PbChildProcessHandle, argc: i32, argv: *const *const c_char) -> PbStatus;
    pub fn pb_pin_insert_call_probed(address: u64, callback: PbProbedCallCallback, user_data: *mut c_void, out_inserted: *mut u8) -> PbStatus;
    pub fn pb_pin_call_application_function_void_0(context: PbConstContextHandle, thread_id: PbThreadId, function_address: u64) -> PbStatus;
    pub fn pb_pin_call_application_function_u64_0(context: PbConstContextHandle, thread_id: PbThreadId, function_address: u64, out_result: *mut u64) -> PbStatus;
    pub fn pb_pin_call_application_function_u64_1(context: PbConstContextHandle, thread_id: PbThreadId, function_address: u64, argument0: u64, out_result: *mut u64) -> PbStatus;
    pub fn pb_pin_call_application_function_u64_2(context: PbConstContextHandle, thread_id: PbThreadId, function_address: u64, argument0: u64, argument1: u64, out_result: *mut u64) -> PbStatus;
    pub fn pb_pin_call_application_function_ptr_usize(context: PbConstContextHandle, thread_id: PbThreadId, function_address: u64, size: u64, out_result: *mut *mut c_void) -> PbStatus;
    pub fn pb_pin_add_detach_function(callback: PbDetachCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_pin_add_detach_function_probed(callback: PbDetachProbedCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_pin_detach() -> PbStatus;
    pub fn pb_pin_detach_probed() -> PbStatus;
    pub fn pb_pin_attach_probed(callback: PbAttachProbedCallback, user_data: *mut c_void, out_status: *mut PbAttachStatus) -> PbStatus;
    pub fn pb_pin_exit_application(status: i32) -> !;
    pub fn pb_pin_exit_process(exit_code: i32) -> !;
    pub fn pb_pin_get_pid(out_pid: *mut i32) -> PbStatus;
    pub fn pb_pin_is_amx_active(thread_id: PbThreadId, out_active: *mut u8) -> PbStatus;
    pub fn pb_tile_config_get_palette_id(tile_config: *const u8, tile_config_size: u64, out_palette_id: *mut u8) -> PbStatus;
    pub fn pb_tile_config_get_tile_bytes_per_row(tile_config: *const u8, tile_config_size: u64, tmm: PbRegId, out_bytes_per_row: *mut u32) -> PbStatus;
    pub fn pb_tile_config_get_tile_rows(tile_config: *const u8, tile_config_size: u64, tmm: PbRegId, out_rows: *mut u32) -> PbStatus;
    pub fn pb_pin_get_context_reg(context: PbConstContextHandle, reg: PbRegId, out_value: *mut u64) -> PbStatus;
    pub fn pb_pin_get_context_regval(context: PbConstContextHandle, reg: PbRegId, buffer: *mut u8, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_pin_get_full_context_regs_set(out_regs: *mut PbRegSet) -> PbStatus;
    pub fn pb_pin_get_context_fpstate(context: PbConstContextHandle, buffer: *mut u8, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_pin_set_context_fpstate(context: PbContextHandle, value: *const u8, value_size: u64) -> PbStatus;
    pub fn pb_pin_get_context_fxsave(context: PbConstContextHandle, out_fxsave: *mut PbFxSave) -> PbStatus;
    pub fn pb_pin_set_context_fxsave(context: PbContextHandle, fxsave: *const PbFxSave) -> PbStatus;
    pub fn pb_pin_get_physical_context_reg(context: PbConstPhysicalContextHandle, reg: PbRegId, out_value: *mut u64) -> PbStatus;
    pub fn pb_pin_set_physical_context_reg(context: PbPhysicalContextHandle, reg: PbRegId, value: u64) -> PbStatus;
    pub fn pb_pin_get_physical_context_fxsave(context: PbConstPhysicalContextHandle, out_fxsave: *mut PbFxSave) -> PbStatus;
    pub fn pb_pin_set_physical_context_fxsave(context: PbPhysicalContextHandle, fxsave: *const PbFxSave) -> PbStatus;
    pub fn pb_pin_supports_processor_state(state: PbProcessorState, out_supported: *mut u8) -> PbStatus;
    pub fn pb_pin_context_contains_state(context: PbContextHandle, state: PbProcessorState, out_contains: *mut u8) -> PbStatus;
    pub fn pb_context_arch_state_size(out_value: *mut u64) -> PbStatus;
    pub fn pb_context_default_context_impl(out_value: *mut u64) -> PbStatus;
    pub fn pb_context_fpstate_alignment(out_value: *mut u64) -> PbStatus;
    pub fn pb_context_fpstate_size(out_value: *mut u64) -> PbStatus;
    pub fn pb_context_num_context_int_regs(out_value: *mut u64) -> PbStatus;
    pub fn pb_context_num_context_regs(out_value: *mut u64) -> PbStatus;
    pub fn pb_context_num_physical_regs(out_value: *mut u64) -> PbStatus;
    pub fn pb_context_num_scratch_regs(out_value: *mut u64) -> PbStatus;
    pub fn pb_context_num_special_regs(out_value: *mut u64) -> PbStatus;
    pub fn pb_context_num_tile_and_cfg_regs(out_value: *mut u64) -> PbStatus;
    pub fn pb_context_num_tile_regs(out_value: *mut u64) -> PbStatus;
    pub fn pb_context_tilecfg_size_bytes(out_value: *mut u64) -> PbStatus;
    pub fn pb_context_tile_size_bytes(out_value: *mut u64) -> PbStatus;
    pub fn pb_context_tile_state_size(out_value: *mut u64) -> PbStatus;
    pub fn pb_context_vstate_padding(out_value: *mut u64) -> PbStatus;
    pub fn pb_pin_save_context(source: PbConstContextHandle, destination: PbContextHandle) -> PbStatus;
    pub fn pb_pin_set_context_reg(context: PbContextHandle, reg: PbRegId, value: u64) -> PbStatus;
    pub fn pb_pin_set_context_regval(context: PbContextHandle, reg: PbRegId, value: *const u8, value_size: u64) -> PbStatus;
    pub fn pb_pin_get_context_stack_arg(context: PbConstContextHandle, index: u32, out_value: *mut u64) -> PbStatus;
    pub fn pb_pin_set_context_stack_arg(context: PbContextHandle, index: u32, value: u64) -> PbStatus;
    pub fn pb_pin_execute_at(context: PbConstContextHandle) -> PbStatus;
    pub fn pb_pin_check_read_access(address: u64, out_accessible: *mut u8) -> PbStatus;
    pub fn pb_pin_check_write_access(address: u64, out_accessible: *mut u8) -> PbStatus;
    pub fn pb_pin_is_attaching(out_attaching: *mut u8) -> PbStatus;
    pub fn pb_pin_is_probe_mode(out_probe_mode: *mut u8) -> PbStatus;
    pub fn pb_pin_is_safe_for_probed_insertion(address: u64, out_safe: *mut u8) -> PbStatus;
    pub fn pb_pin_tool_full_path(buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_pin_get_source_location(address: u64, column: *mut i32, line: *mut i32, file_name: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_pin_safe_copy(destination: *mut c_void, source_address: u64, size: u64, out_copied: *mut u64) -> PbStatus;
    pub fn pb_pin_safe_copy_ex(destination: *mut c_void, source_address: u64, size: u64, out_copied: *mut u64, out_exception: *mut PbExceptionInfoSnapshot) -> PbStatus;
}
